force-app/main/default/objects/Appointment__c/fields/Utility_Provider__c.field-meta.xml
<CustomField>
    <fullName>Utility_Provider__c</fullName>
    <label>Utility Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>SRP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>