force-app/main/default/objects/Appointment__c/fields/What_year_was_your_home_built__c.field-meta.xml
<CustomField>
    <fullName>What_year_was_your_home_built__c</fullName>
    <label>What year was your home built</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>