force-app/main/default/objects/Appointment__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <formula>Person_Account__r.Zip__c</formula>
    <label>Zip</label>
    <type>Text</type>
</CustomField>