force-app/main/default/objects/Appointment__c/recordTypes/Additions.recordType-meta.xml
<RecordType>
    <fullName>Additions</fullName>
    <active>true</active>
    <label>Addition(s)</label>
</RecordType>