force-app/main/default/objects/Appointment__c/recordTypes/Bathroom_Remodel.recordType-meta.xml
<RecordType>
    <fullName>Bathroom_Remodel</fullName>
    <active>true</active>
    <label>Bathroom Remodel</label>
</RecordType>