force-app/main/default/objects/Appointment__c/recordTypes/Blinds_Shutters.recordType-meta.xml
<RecordType>
    <fullName>Blinds_Shutters</fullName>
    <active>true</active>
    <label>Blinds &amp; Shutters</label>
</RecordType>