force-app/main/default/objects/Appointment__c/recordTypes/Carpet_Floor_Cleaning.recordType-meta.xml
<RecordType>
    <fullName>Carpet_Floor_Cleaning</fullName>
    <active>true</active>
    <label>Carpet/Floor Cleaning</label>
</RecordType>