force-app/main/default/objects/Appointment__c/recordTypes/Closet_Organization.recordType-meta.xml
<RecordType>
    <fullName>Closet_Organization</fullName>
    <active>true</active>
    <label>Closet Organization</label>
</RecordType>