force-app/main/default/objects/Appointment__c/recordTypes/Concrete.recordType-meta.xml
<RecordType>
    <fullName>Concrete</fullName>
    <active>true</active>
    <label>Concrete</label>
</RecordType>