force-app/main/default/objects/Appointment__c/recordTypes/Concrete_Coating.recordType-meta.xml
<RecordType>
    <fullName>Concrete_Coating</fullName>
    <active>true</active>
    <label>Concrete Coating</label>
</RecordType>