force-app/main/default/objects/Appointment__c/recordTypes/Flooring.recordType-meta.xml
<RecordType>
    <fullName>Flooring</fullName>
    <active>true</active>
    <label>Flooring</label>
</RecordType>