force-app/main/default/objects/Appointment__c/recordTypes/Garage_Organization.recordType-meta.xml
<RecordType>
    <fullName>Garage_Organization</fullName>
    <active>true</active>
    <label>Garage Organization</label>
</RecordType>