force-app/main/default/objects/Appointment__c/recordTypes/Handyman.recordType-meta.xml
<RecordType>
    <fullName>Handyman</fullName>
    <active>true</active>
    <label>Handyman</label>
</RecordType>