force-app/main/default/objects/Appointment__c/recordTypes/Home_Automation.recordType-meta.xml
<RecordType>
    <fullName>Home_Automation</fullName>
    <active>true</active>
    <label>Home Automation</label>
</RecordType>