force-app/main/default/objects/Appointment__c/recordTypes/House_Cleaning.recordType-meta.xml
<RecordType>
    <fullName>House_Cleaning</fullName>
    <active>true</active>
    <label>House Cleaning</label>
</RecordType>