force-app/main/default/objects/Appointment__c/recordTypes/Kitchen_Remodel.recordType-meta.xml
<RecordType>
    <fullName>Kitchen_Remodel</fullName>
    <active>true</active>
    <label>Kitchen Remodel</label>
</RecordType>