force-app/main/default/objects/Appointment__c/recordTypes/Landscape_Design_Installation.recordType-meta.xml
<RecordType>
    <fullName>Landscape_Design_Installation</fullName>
    <active>true</active>
    <label>Landscape Design/Installation</label>
</RecordType>