force-app/main/default/objects/Appointment__c/recordTypes/Landscape_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Landscape_Maintenance</fullName>
    <active>true</active>
    <label>Landscape Maintenance</label>
</RecordType>