force-app/main/default/objects/Appointment__c/recordTypes/Locksmith.recordType-meta.xml
<RecordType>
    <fullName>Locksmith</fullName>
    <active>true</active>
    <label>Locksmith</label>
</RecordType>