force-app/main/default/objects/Appointment__c/recordTypes/Painting.recordType-meta.xml
<RecordType>
    <fullName>Painting</fullName>
    <active>true</active>
    <label>Painting</label>
</RecordType>