force-app/main/default/objects/Appointment__c/recordTypes/Pool_Design_Installation.recordType-meta.xml
<RecordType>
    <fullName>Pool_Design_Installation</fullName>
    <active>true</active>
    <label>Pool Design/Installation</label>
</RecordType>