force-app/main/default/objects/Appointment__c/recordTypes/Roofing.recordType-meta.xml
<RecordType>
    <fullName>Roofing</fullName>
    <active>true</active>
    <label>Roofing</label>
</RecordType>