force-app/main/default/objects/Appointment__c/recordTypes/Security_Doors.recordType-meta.xml
<RecordType>
    <fullName>Security_Doors</fullName>
    <active>true</active>
    <label>Security Doors</label>
</RecordType>