force-app/main/default/objects/Appointment__c/recordTypes/Solar.recordType-meta.xml
<RecordType>
    <fullName>Solar</fullName>
    <active>true</active>
    <label>Solar</label>
</RecordType>