force-app/main/default/objects/Appointment__c/recordTypes/Sunroom_Patio_Enclosure.recordType-meta.xml
<RecordType>
    <fullName>Sunroom_Patio_Enclosure</fullName>
    <active>true</active>
    <label>Sunroom Patio Enclosure</label>
</RecordType>