force-app/main/default/objects/Appointment__c/recordTypes/TV_Internet.recordType-meta.xml
<RecordType>
    <fullName>TV_Internet</fullName>
    <active>true</active>
    <label>TV &amp; Internet</label>
</RecordType>