force-app/main/default/objects/Appointment__c/recordTypes/Water_Filtration.recordType-meta.xml
<RecordType>
    <fullName>Water_Filtration</fullName>
    <active>true</active>
    <label>Water Filtration</label>
</RecordType>