force-app/main/default/objects/Appointment__c/recordTypes/Windows.recordType-meta.xml
<RecordType>
    <fullName>Windows</fullName>
    <active>true</active>
    <label>Windows</label>
</RecordType>