force-app/main/default/objects/Appointment__c/listViews/Intent.listView-meta.xml
<ListView>
    <fullName>Intent</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Home_Service__c</columns>
    <columns>Partner__c</columns>
    <columns>Appt_Date__c</columns>
    <columns>Appt_Window_Time__c</columns>
    <columns>Appointment_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/8/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>Partner__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Test</value>
    </filters>
    <filters>
        <field>Appt_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Intent</label>
</ListView>